# mics

./: .gitignore  ;  ANDROSi2s.dtbo  Cargo.toml  build_and_run.sh  config.txt  install.sh  justfile  run.sh  update.sh  update_no_run.sh  write
other/: config.txt  install.sh  local_driver.py  main.c  reader.c  rozdzielanie_wav_beamforming.py  terminal-sharing-start.service  terminal-sharing-start.sh  terminal-sharing-start.timer  test.json
src/: audio.rs  data.rs  detect.rs  main.rs  models.rs
src/data/: aht.rs  bmp.rs  device_manager.rs  gps.rs  imu.rs  ina.rs  wind.rs
tract_test/: Cargo.toml
tract_test/src/: main.rs
