[package]
name = "mics"
version = "0.1.0"
edition = "2021"

[dependencies]
aht10 = "0.0.1"
alsa = "0.9.1"
bmp280 = "0.4.0"
bytemuck = "1.19.0"
# bmp180-driver = "0.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
flexi_logger = "0.29.5"
hound = "3.5.1"
log = "0.4.22"
mpu9250 = { version = "0.25.0", features = ["i2c"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.15", features = ["netlib-static"] }
nmea = { version = "0.7.0", features = ["GGA"] }
num-traits = "0.2.19"
parking_lot = "0.12.3"
rppal = { version = "0.19.0", features = ["hal"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
