[package]
name = "mics"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = ["tract_test"]

[features]
# default = ["write_to_disk"]
write_to_disk = []

[[bin]]
name = "andros"
path = "src/main.rs"

[dependencies]
aht10 = "0.0.1"
alsa = "0.9.1"
bmp280 = "0.4.0"
# bytemuck = "1.19.0"
# bmp180-driver = "0.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
# ctrlc = "3.4.5"
flexi_logger = "0.29.7"
hound = "3.5.1"
ina219 = { version = "0.2.0", features = ["std"] }
log = "0.4.22"
mpu9250 = { version = "0.25.0", features = ["i2c"] }
# ndarray = "0.15"
# ndarray-linalg = { version = "0.15", features = ["netlib-static"] }
nmea = { version = "0.7.0", features = ["GGA"] }
num-traits = "0.2.19"
parking_lot = "0.12.3"
reqwest = { version = "0.12.12", features = ["blocking"] }
rppal = { version = "0.19.0", features = ["hal"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3.17"
sysinfo = "0.33.1"
thiserror = "1.0.65"
